--- a/write.html
+++ b/write.html
@@ -14,7 +14,7 @@ layout: base
     </div>
   </div>
   <div class="markdown-body">
-  	<select id="">
+  	<select id="categoryy">
   		<option>{% site.featured_categories %}</option>
   	</select>
   	<textarea rows="35" cols="90" id="postContent">
