--- a/write.html
+++ b/write.html
@@ -18,7 +18,7 @@ layout: base
   		<option>{% site.featured_categories %}</option>
   	</select>
   	<textarea rows="35" cols="90" id="postContent">
----
+<!-- ---
 layout: post
 title:  "제목을 입력해 주세요."
 date:   2019-04-18 16:02:01 -0600
@@ -26,6 +26,6 @@ categories: devnote
 tags: linux
 ---
 
-내용을 입력해 주세요.
+내용을 입력해 주세요. -->
   	</textarea>
   </div>
