--- a/write.html
+++ b/write.html
@@ -18,14 +18,6 @@ layout: base
   		<option>{% site.featured_categories %}</option>
   	</select>
   	<textarea rows="35" cols="90" id="postContent">
-<!-- ---
-layout: post
-title:  "제목을 입력해 주세요."
-date:   2019-04-18 16:02:01 -0600
-categories: devnote
-tags: linux
----
-
-내용을 입력해 주세요. -->
+ㅁㄴㅇ
   	</textarea>
   </div>
