--- a/write.html
+++ b/write.html
@@ -27,8 +27,14 @@ layout: base
   {% for node in pages %}
   {% assign count = count | plus: 1 %}
   		<option>{{ node.title }}</option>
-  {% endfor %}
   	</select>
+  	<select id="tagg">
+  	{% for subnode in subpages %}
+  		<option>{{ subnode.title }}</option>
+  	</select>
+  	{% endfor %}
+  {% endfor %}
+
   	<textarea rows="35" cols="90" id="postContent">
 ㅁㄴㅇ
   	</textarea>
