--- a/write.html
+++ b/write.html
@@ -14,7 +14,7 @@ layout: base
     </div>
   </div>
   <div class="markdown-body">
-  	<select id="categoryy" onchange="changeCategory()">
+  	<select id="categoryy" onclick="changeCategory()">
   	{% assign pages = site.pages %}
 
   {% for document in site.documents %}
