소스 재수정

--- a/write.html
+++ b/write.html
@@ -36,33 +36,33 @@ function changeCategory() {
 	if( resVal == "Daily" ) {
 		var optVal = document.createElement("option");
 		optVal.text = "fashion";
-		optVal.value = "fashion"
+		optVal.value = "fashion";
 		objSel.options.add(optVal);
 
 		var optVal2 = document.createElement("option");
 		optVal2.text = "food";
-		optVal2.value = "food"
+		optVal2.value = "food";
 		objSel.options.add(optVal2);
 
 		var optVal3 = document.createElement("option");
 		optVal3.text = "movie";
-		optVal3.value = "movie"
+		optVal3.value = "movie";
 		objSel.options.add(optVal3);
 
 		var optVal4 = document.createElement("option");
 		optVal4.text = "book";
-		optVal4.value = "book"
+		optVal4.value = "book";
 		objSel.options.add(optVal4);
 
 	} else if( resVal == "DevNote" ) {
 		var optVal = document.createElement("option");
 		optVal.text = "jekyll";
-		optVal.value = "jekyll"
+		optVal.value = "jekyll";
 		objSel.options.add(optVal);
 
 		var optVal2 = document.createElement("option");
 		optVal2.text = "linux";
-		optVal2.value = "linux"
+		optVal2.value = "linux";
 		objSel.options.add(optVal2);
 	}
 }
