--- a/write.html
+++ b/write.html
@@ -93,6 +93,16 @@ function getTimeStamp() {
   return s;
 }
 
+function getTimeStamp2() {
+  var d = new Date();
+  var s =
+    leadingZeros(d.getFullYear(), 4) + '-' +
+    leadingZeros(d.getMonth() + 1, 2) + '-' +
+    leadingZeros(d.getDate(), 2);
+
+  return s;
+}
+
 function leadingZeros(n, digits) {
   var zero = '';
   n = n.toString();
@@ -109,7 +119,28 @@ function createSource() {
 	document.getElementById("postContent").value = resCtt;
 	document.getElementById("postContent").style.display = "";
 }
+
+function saveToFile_Chrome() {
+	var fileName = getTimeStamp2() + "-제목을 입력해주세요.markdown";
+	var content = document.getElementById("postContent").value;
+    var blob = new Blob([content], { type: 'text/plain' });
+
+    objURL = window.URL.createObjectURL(blob);
+
+    // 이전에 생성된 메모리 해제
+    if (window.__Xr_objURL_forCreatingFile__) {
+        window.URL.revokeObjectURL(window.__Xr_objURL_forCreatingFile__);
+    }
+    window.__Xr_objURL_forCreatingFile__ = objURL;
+
+    var a = document.createElement('a');
+
+    a.download = fileName;
+    a.href = objURL;
+    a.click();
+}
 </script>
   	<textarea rows="35" cols="90" id="postContent" style="display: none;">
   	</textarea>
+  	<button onclick="saveToFile_Chrome()">파일로 저장</button>
   </div>
