--- a/write.html
+++ b/write.html
@@ -39,6 +39,9 @@ layout: base
       {{ author.about | markdownify }}
     </div>
   </div>
+  <p class="message">
+  	블로그를 통해 글을 쓰고 다운로드 한 뒤 Bat 파일이나 sh 파일로 배포 합니다.
+  </p>
   <div class="markdown-body">
   	<select class="selectBox" id="categoryy" onclick="changeCategory()">
   		<option value="">선택</option>
