--- a/write.html
+++ b/write.html
@@ -40,7 +40,7 @@ layout: base
     </div>
   </div>
   <p class="message">
-  	입력을 최소화 시켜서 작성 할 수 있도록 만들었습니다.
+  	입력을 최소화 시켜서 작성 할 수 있도록 만들었습니다.<br/>
   	블로그를 통해 글을 쓰고 다운로드 한 뒤 Bat 파일이나 sh 파일로 배포 합니다.
   </p>
   <div class="markdown-body">
